--- a/scss/4-pages/_home.scss
+++ b/scss/4-pages/_home.scss
@@ -58,6 +58,11 @@
             height: auto;
             border-radius: $border-radius;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.25);
+            transition: transform .5s;
+
+            &:hover {
+                transform: scale(1.01);
+            }
         }
 
         &-desc {
